Reset 'mAltDC' when we finish Print Preview. b=365578 r+sr=roc